--- a/etc/chatserver.conf
+++ b/etc/chatserver.conf
@@ -1,8 +1,8 @@
 #mysql config
-dbserver=122.51.38.77
+dblink=tcp://127.0.0.1:3306
 dbuser=root
-dbpassworld=123456
-dbname=Mychat
+dbpassworld=123
+dbname=UserInfo
 
 #client listener
 listenip=0.0.0.0
