--- a/etc/chatserver.conf
+++ b/etc/chatserver.conf
@@ -1,8 +1,15 @@
-#mysql config
+#database mysql config
 dblink=tcp://127.0.0.1:3306
 dbuser=root
 dbpassworld=123
 dbname=UserInfo
+
+#boost mysql config
+mysqlhost=127.0.0.1
+mysqlport=3306
+mysqluser=root
+mysqlpassword=123
+mysqldbname=UserInfo
 
 #client listener
 listenip=0.0.0.0
