--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,7 +71,11 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "variant": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "strstream": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
+        "shared_mutex": "cpp"
     },
     "cmake.configureOnOpen": true
 }
